--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^5.4.5",
+    "react-otp-input": "^3.1.0",
     "react-router-dom": "^6.17.0"
   },
   "devDependencies": {
